etc/iptables/rules.v6
# forked copy from: https://github.com/gronke/systemd-iptables/blob/master/etc/iptables/ip6tables.rules
# updated name schema for `iptables-persistent` package

*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]

# loopback
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A INPUT -s ::1 -d ::1 -j ACCEPT
-A OUTPUT -s ::1 -d ::1 -j ACCEPT

# ACCEPT already ESTABLISHED connections
-A INPUT -p ALL -i eth0 -m state --state ESTABLISHED,RELATED -j ACCEPT

# DROP --rt-type 0
-A INPUT -m rt --rt-type 0 -j DROP
-A OUTPUT -m rt --rt-type 0 -j DROP
-A FORWARD -m rt --rt-type 0 -j DROP

# ACCEPT all OUTPUT
-A OUTPUT -p ALL -o eth0 -j ACCEPT

# SSH
-A INPUT -p tcp -i eth0 --dport 22 -m state --state NEW -j ACCEPT

# ICMP
-A INPUT -p ipv6-icmp -j ACCEPT
-A OUTPUT -p ipv6-icmp -j ACCEPT

COMMIT
